--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,19 @@ a {
   color: #39add1;
   font-weight: 700;
   }
-  a:hover {
-    color: #111;
-  }
+
+/******* Navigation *********/
+nav ul li:hover .st-nav0 {
+  fill: #111;
+}
+
+nav ul li:hover a {
+  color: #111;
+}
+
+.st-nav0, a {
+  transition: 1s;
+}
 
 .name {
   display: none;
@@ -84,22 +94,20 @@ footer {
 /****** SVG *******/
 
 .logo {
-  width: 25%;
+  width: 140px;
+  height: 120px
 }
 
 .dog {
-  width: 150px;
+  width: 170px;
+  height: 170px;
   margin-bottom: 5px;
 }
 
 .nav-svg {
-  width: 25px;
-  height: 25px;
+  width: 28px;
+  height: 24px;
 }
-
-.st-nav0:hover {
-  fill: #111;
-  }
 
 /* RED DOG */
 .red0 {
@@ -233,6 +241,8 @@ footer {
 
 
 /****SVG Animation ****/
+
+
 .nav-svg *,
 .dog *,
 .st2 * {
@@ -258,6 +268,12 @@ footer {
 
 /****** Media Queries ******/
 @media (max-width: 419px) {
+  main li {
+    margin: 0;
+    display: block;
+  }
+  
+
   #text {
     display: none;
   }
@@ -267,6 +283,9 @@ footer {
   }
 
   .dog {
-    width: 75px;
-  } 
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  
 }
